<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Dashboard">

    <ImageButton
        android:id="@+id/menu_btn"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/menu_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_ic"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="183dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/home"
        android:textColor="@color/black"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="21dp"
        android:fontFamily="@font/poppins"
        android:text="@string/home_caption"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/length_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/length_box"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/l_icon"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
        android:clickable="true"
        android:onClick="clickFunction"/>

    <ImageButton
        android:id="@+id/volume_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/volume_box"
        app:layout_constraintStart_toStartOf="@+id/length_btn"
        app:layout_constraintTop_toBottomOf="@+id/length_btn"
        app:srcCompat="@drawable/volume_box"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/mass_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/mass_box"
        app:layout_constraintEnd_toEndOf="@+id/length_btn"
        app:layout_constraintTop_toBottomOf="@+id/length_btn"
        app:srcCompat="@drawable/mass_bx" />

    <ImageButton
        android:id="@+id/temp_btn"
        android:layout_width="224dp"
        android:layout_height="177dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/temp_box"
        app:layout_constraintStart_toStartOf="@+id/volume_btn"
        app:layout_constraintTop_toBottomOf="@+id/volume_btn"
        app:srcCompat="@drawable/temp_bx"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
        />

    <ImageButton
        android:id="@+id/time_btn"
        android:layout_width="118dp"
        android:layout_height="178dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/time_box"
        app:layout_constraintEnd_toEndOf="@+id/mass_btn"
        app:layout_constraintTop_toBottomOf="@+id/mass_btn"
        app:srcCompat="@drawable/time_bx"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="399dp"
        android:layout_height="80dp"
        android:background="@drawable/rounded_top_corner"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav" />

</androidx.constraintlayout.widget.ConstraintLayout>